# EGElearn

./: .gitignore
backend/: .env.example  .gitlab-ci.yml  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/rabbitmq/: rabbitmq.conf
backend/scripts/: backfill_mastery.py  build_migration_pipeline.py  check_amqp.py  deploy-dev.sh  insert_diagram_placeholders.py  inspect_ocr_response.py  manage_referrals.py  ocr_images.py  ocr_to_local.py  prune_shared_data.py  reenrich_past_papers.py  rename_rp_db_nodes.py  replace_shared_lessons.py  seed_alevel.py  seed_prompts_only.py  setup_qdrant.py  sync_shared_subject.py  update_grading_prompt.py  upload_diagram_test.py  upload_diagrams.py  upload_psychology_diagrams.py
backend/src/: config.py  main.py  runtime.py
backend/tests/: conftest.py  test_activity_hooks.py  test_activity_router.py  test_activity_service.py  test_auth_activity.py  test_chat_available_models.py  test_chat_branching_entities.py  test_chat_branching_schemas.py  test_chat_practice_scope_schema.py  test_chat_usage_logging.py  test_citation_extractor.py  test_context_manager.py  test_ege_subject_seed.py  test_feedback_hub_notes.py  test_feynman_citations.py  test_files_ege_router.py  test_google_oauth.py  test_highlights_service.py  test_hint_advisory_lock_key.py  test_learning_parser.py  test_mail_desktop_link.py  test_markdown_validator.py  test_optional_themes.py  test_past_paper_admin_library.py  test_past_paper_admin_router.py  test_past_paper_canonical_lookup.py  test_past_paper_clone_canonical_flag.py  (+20 more)
(+637 files in other folders)
