[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "aioboto3>=13.0.0",
    "python-multipart>=0.0.20",
    "google-genai>=1.10.0",
    "mistralai>=1.0.0",
    "openai>=1.0.0",
    "voyageai>=0.3.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "aio-pika>=9.6.1",
    "google-auth>=2.49.1",
    "Pillow>=10.0.0",
    "pillow-heif>=0.18.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
testpaths = ["tests"]
